--- a/Spirograph/styles/gear-options-selector.less
+++ b/Spirograph/styles/gear-options-selector.less
@@ -83,6 +83,21 @@
                         font-size: 20px;
                         margin-top: 3px;
                     }
+
+                    &.ring-gear-label {
+                        font-size: 15px;
+                        margin-top: 2px;
+
+                        div {
+                            margin-top: -2px;
+                            margin-bottom: -2px;
+                        }
+
+                        hr {
+                            margin: 0 3px 0 3px;
+                            border-color: #555;
+                        }
+                    }
                 }
 
                 &:hover {
