lots of toolbar work

--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -1,11 +1,12 @@
-﻿@import "base.less";
-@import "gear-options-selector.less";
-@import "color-selector.less";
-@import "jsscrollpane-modifications.less";
+﻿@import (less) '../bower_components/jscrollpane/style/jquery.jscrollpane.css';
+@import (less) '../bower_components/bootstrap/dist/css/bootstrap.css';
+@import (less) '../bower_components/fontawesome/css/font-awesome.css';
+@import "_base.less";
+@import "_gear-options-selector.less";
+@import "_color-selector.less";
+@import "_jsscrollpane-modifications.less";
+@import "_toolbar-container.less";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
-@import (less) '../bower_components/jscrollpane/style/jquery.jscrollpane.css';
-/*@import (less) '../bower_components/bootstrap/dist/css/bootstrap.min.css';*/
-/*@import (less) '../bower_components/fontawesome/css/font-awesome.css';*/
 
 .spirograph {
 
