a few changes to allow proper dist builds

--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -1,6 +1,6 @@
 ﻿@import (less) '../bower_components/jscrollpane/style/jquery.jscrollpane.css';
 @import (less) '../bower_components/bootstrap/dist/css/bootstrap.css';
-@import (less) '../bower_components/fontawesome/css/font-awesome.css';
+@import (less) '../bower_components/fontawesome/less/font-awesome.less';
 @import "_base.less";
 @import "_gear-options-selector.less";
 @import "_color-selector.less";
