--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -6382,8 +6382,8 @@ button.close {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../bower_components/fontawesome/fonts/fontawesome-webfont.eot?v=4.1.0');
-  src: url('../bower_components/fontawesome/fonts/fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'), url('../bower_components/fontawesome/fonts/fontawesome-webfont.woff?v=4.1.0') format('woff'), url('../bower_components/fontawesome/fonts/fontawesome-webfont.ttf?v=4.1.0') format('truetype'), url('../bower_components/fontawesome/fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg');
+  src: url('.//fontawesome-webfont.eot?v=4.1.0');
+  src: url('.//fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'), url('.//fontawesome-webfont.woff?v=4.1.0') format('woff'), url('.//fontawesome-webfont.ttf?v=4.1.0') format('truetype'), url('.//fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
