fixed dark mode bug

--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -8271,6 +8271,8 @@ body {
 #toolbar-container .toolbar-button {
   padding-top: 10px;
   padding-bottom: 10px;
+  width: 54px;
+  height: 54px;
 }
 .spirograph #spirograph-svg {
   margin-left: -1280px;
