--- a/Spirograph/styles/_toolbar-container.less
+++ b/Spirograph/styles/_toolbar-container.less
@@ -13,5 +13,7 @@
     .toolbar-button {
         padding-top: 10px;
         padding-bottom: 10px;
+        width: 54px;
+        height: 54px;
     }
 }
