--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -38,6 +38,15 @@
         color: lightgray;
     }
 
+    .cursor-tracker {
+        stroke: rgba(41,22,107,.3);
+        stroke-width: 3px;
+
+        &.dark {
+            stroke: rgba(199,202,237, .6);
+        }
+    }
+
     .gear {
         fill: black;
         fill-opacity: 0.2;
