--- a/Spirograph/styles/_toolbar-container.less
+++ b/Spirograph/styles/_toolbar-container.less
@@ -6,7 +6,6 @@
     height: 80px;
     width: 100%;
     padding-top: 10px;
-    /*background: @toolbar-background;*/
     z-index: 10;
     text-align: right;
 
@@ -15,5 +14,11 @@
         padding-bottom: 10px;
         width: 54px;
         height: 54px;
+        opacity: .8;
+
+        &.disabled {
+            opacity: .5;
+        }
+
     }
 }
