color related bug fixes

--- a/Spirograph/styles/_color-selector.less
+++ b/Spirograph/styles/_color-selector.less
@@ -131,7 +131,7 @@
     }
 }
 
-// we will need to find a way to be more 
+// we will need to find a way to be more
 // specific if we add more modals down the road
 .popover.left {
     margin-top: -103px;
@@ -139,6 +139,30 @@
     .arrow {
         margin-top: 92px;
     }
+}
+
+.spectrum-color-picker-popover {
+    .spectrum-color-picker {
+        width: 167px;
+        height: 157px;
+        position: relative;
+    }
+
+    .color-preview {
+        position: relative;
+        width: 100%;
+        height: 32px;
+        border: 1px solid black;
+        margin-bottom: 10px;
+    }
+
+    .choose-color-button {
+        width: 100%;
+
+        i {
+            margin-right: 10px;
+        }
+    } 
 }
 
 .spectrum-color-picker-container {
