--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -8743,6 +8743,24 @@ body {
 .popover.left .arrow {
   margin-top: 92px;
 }
+.spectrum-color-picker-popover .spectrum-color-picker {
+  width: 167px;
+  height: 157px;
+  position: relative;
+}
+.spectrum-color-picker-popover .color-preview {
+  position: relative;
+  width: 100%;
+  height: 32px;
+  border: 1px solid black;
+  margin-bottom: 10px;
+}
+.spectrum-color-picker-popover .choose-color-button {
+  width: 100%;
+}
+.spectrum-color-picker-popover .choose-color-button i {
+  margin-right: 10px;
+}
 .spectrum-color-picker-container {
   background: none;
   border: none;
