--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -7,6 +7,7 @@
 @import "_color-selector.less";
 @import "_jsscrollpane-modifications.less";
 @import "_toolbar-container.less";
+@import "_help-modal.less";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
 .spirograph {
@@ -116,19 +117,5 @@
         text-align: center;
         z-index: 10;
         cursor: pointer;
-    }
-
-    a {
-        color: lightgray;
-
-        &:link, &:visited {
-            text-decoration: none;
-            color: lightgray;
-        }
-
-        &:hover, &:active {
-            text-decoration: none;
-            color: gray;
-        }
     }
 }
