--- a/Spirograph/styles/_base.less
+++ b/Spirograph/styles/_base.less
@@ -23,6 +23,37 @@ body {
     overflow: hidden;
 }
 
+.cleared {
+    clear: both;
+    float: none;
+}
+
 .btn, .popover {
     border-radius: 0;
+}
+
+.modal-content {
+    border-radius: 0;
+}
+
+// stolen from StackOverflow
+kbd {
+    color: #000;
+    background: #eee;
+    border-style: solid;
+    border-color: #ccc #aaa #888 #bbb;
+    padding: .1em .6em;
+    border: 1px solid #ccc;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+    background-color: #f7f7f7;
+    color: #333;
+    -moz-box-shadow: 0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+    -webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+    border-radius: 3px;
+    display: inline-block;
+    margin: 0 .1em;
+    text-shadow: 0 1px 0 #fff;
+    line-height: 1.4;
+    white-space: nowrap;
 }
