small bug fixes, implemented download and save buttons

--- a/Spirograph/styles/_color-selector.less
+++ b/Spirograph/styles/_color-selector.less
@@ -133,7 +133,7 @@
 
 // we will need to find a way to be more
 // specific if we add more modals down the road
-.popover.left {
+.spectrum-popover.popover{
     margin-top: -103px;
 
     .arrow {
