--- a/Spirograph/styles/app.css
+++ b/Spirograph/styles/app.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
+﻿@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 /*
  * CSS Styles that are needed by jScrollPane for it to operate correctly.
  *
@@ -6373,7 +6373,7 @@ button.close {
     display: none !important;
   }
 }
-/*# sourceMappingURL=bootstrap.css.map */
+/*# sourceMappingURL=app.css.map */
 /*!
  *  Font Awesome 4.1.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -8764,10 +8764,10 @@ kbd {
 #color-selector .background-container .scroll-container .color-container.selected .color {
   border: 3px solid transparent;
 }
-.popover.left {
+.spectrum-popover.popover {
   margin-top: -103px;
 }
-.popover.left .arrow {
+.spectrum-popover.popover .arrow {
   margin-top: 92px;
 }
 .spectrum-color-picker-popover .spectrum-color-picker {
