fixed Firefox undo bug, touched up help modal

--- a/Spirograph/styles/_help-modal.less
+++ b/Spirograph/styles/_help-modal.less
@@ -1,14 +1,9 @@
 ﻿#help-modal {
-    .column {
+    td {
         line-height: 200%;
     }
 
-    .column-left {
-        float: left;
-    }
-
-    .column-right {
-        float: right;
+    td:nth-child(even) {
         text-align: right;
     }
 }
