--- a/Spirograph/styles/_base.less
+++ b/Spirograph/styles/_base.less
@@ -21,6 +21,9 @@
 body {
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .cleared {
