cross browser fixes

--- a/Spirograph/styles/_base.less
+++ b/Spirograph/styles/_base.less
@@ -18,6 +18,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow: hidden;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
