--- a/Spirograph/styles/_color-selector.less
+++ b/Spirograph/styles/_color-selector.less
@@ -34,7 +34,7 @@
             margin-right: 21px;
             margin-top: -20px;
             -moz-transform: rotate(90deg) translate3d(0, 0, 0);
-            -ms-transform: rotate(90deg) translate3d(0, 0, 0);
+            -ms-transform:rotate(90deg);
             -o-transform: rotate(90deg) translate3d(0, 0, 0);
             -webkit-transform: rotate(90deg) translate3d(0, 0, 0);
             transform: rotate(90deg) translate3d(0, 0, 0);
