--- a/Spirograph/styles/_gear-options-selector.less
+++ b/Spirograph/styles/_gear-options-selector.less
@@ -40,7 +40,7 @@
             margin-left: 16px;
             margin-top: -20px;
             -moz-transform: rotate(-90deg) translate3d(0, 0, 0);
-            -ms-transform: rotate(-90deg) translate3d(0, 0, 0);
+            -ms-transform:rotate(-90deg);
             -o-transform: rotate(-90deg) translate3d(0, 0, 0);
             -webkit-transform: rotate(-90deg) translate3d(0, 0, 0);
             transform: rotate(-90deg) translate3d(0, 0, 0);
