--- a/Spirograph/styles/_help-modal.less
+++ b/Spirograph/styles/_help-modal.less
@@ -6,4 +6,17 @@
     td:nth-child(even) {
         text-align: right;
     }
+
+    #mac-users {
+        color: #999;
+        margin-top: 15px;
+        margin-bottom: 10px;
+        margin-left: 10px;
+        font-style: italic;
+
+        * {
+            color: #555;
+            font-style: normal;
+        }
+    }
 }
