small tweaks to avoid empty image submissions.  split keyboard shortcuts and about into separate modals.

--- a/Spirograph/styles/_help-modal.less
+++ b/Spirograph/styles/_help-modal.less
@@ -1,4 +1,4 @@
-﻿#help-modal {
+﻿#about-modal, #keyboard-shortcuts-modal {
     td {
         line-height: 200%;
     }
@@ -18,5 +18,9 @@
             color: #555;
             font-style: normal;
         }
+    }
+
+    #about-content {
+        padding: 20px;
     }
 }
