more gallery changes, auto disabled gallery submissions based on time

--- a/Spirograph/styles/_toolbar-container.less
+++ b/Spirograph/styles/_toolbar-container.less
@@ -16,7 +16,13 @@
     z-index: 10;
     text-align: right;
 
-    .toolbar-button {
+    #disabled-upload-button-placeholder {
+        border: 1px solid #ccc;
+        text-align: center;
+        float: left;
+    }
+
+    .toolbar-button, #disabled-upload-button-placeholder {
         padding-top: 10px;
         padding-bottom: 10px;
         width: 54px;
@@ -35,5 +41,3 @@
         border-color: #ccc;
     }
 }
-
-
