--- a/Spirograph/styles/_toolbar-container.less
+++ b/Spirograph/styles/_toolbar-container.less
@@ -35,7 +35,7 @@
         }
     }
 
-    #toolbar-divider {
+    .toolbar-divider {
         margin-top: 5px;
         margin-bottom: 10px;
         border-color: #ccc;
