new mobile warning method

--- a/Spirograph/styles/_help-modal.less
+++ b/Spirograph/styles/_help-modal.less
@@ -1,4 +1,4 @@
-﻿#about-modal, #keyboard-shortcuts-modal {
+﻿#about-modal, #keyboard-shortcuts-modal, #mobile-modal {
     td {
         line-height: 200%;
     }
