--- a/Spirograph/styles/_modals.less
+++ b/Spirograph/styles/_modals.less
@@ -1,4 +1,4 @@
-﻿#about-modal, #keyboard-shortcuts-modal, #mobile-modal {
+﻿#about-modal, #keyboard-shortcuts-modal, #mobile-modal, #download-modal {
     td {
         line-height: 200%;
     }
