--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -7,7 +7,7 @@
 @import "_color-selector.less";
 @import "_jsscrollpane-modifications.less";
 @import "_toolbar-container.less";
-@import "_help-modal.less";
+@import "_modals.less";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
 .spirograph {
