--- a/Spirograph/gallery/styles/app.css
+++ b/Spirograph/gallery/styles/app.css
@@ -1,4 +1,4 @@
-﻿/*! Swipebox v1.2.8 | Constantin Saguin csag.co | MIT License | github.com/brutaldesign/swipebox */
+/*! Swipebox v1.2.8 | Constantin Saguin csag.co | MIT License | github.com/brutaldesign/swipebox */
 html.swipebox-html.swipebox-touch {
   overflow: hidden !important;
 }
@@ -6660,7 +6660,7 @@ button.close {
     display: none !important;
   }
 }
-/*# sourceMappingURL=app.css.map */
+/*# sourceMappingURL=bootstrap.css.map */
 /*!
  *  Font Awesome 4.2.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
