use https CDN instead of http for fonts

--- a/Spirograph/styles/app.less
+++ b/Spirograph/styles/app.less
@@ -8,7 +8,7 @@
 @import "_jsscrollpane-modifications.less";
 @import "_toolbar-container.less";
 @import "_modals.less";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
 .spirograph {
 
